5_gateway_lb_traffic_based_autoscaling/service_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-site
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-site
  template:
    metadata:
      labels:
        app: test-site
    spec:
      containers:
      - name: test-site
        image: asia-east1-docker.pkg.dev/williamlab/sample-nginx-server/website1:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-site-service
  namespace: default
  annotations:
    networking.gke.io/max-rate-per-endpoint: "10" # The maximum traffic a Service should receive in requests per second, per Pod.
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: test-site
  type: NodePort
